tests/should-pass/adaptors/r.multiple-order.fk
-- #desc Regression test for a special case involving multiple instances of the same interface
-- #return b

interface Eff X = oper : X

data A = a
data B = b

handleA : <Eff A> X -> X
handleA x = x
handleA <oper -> k> = handleA (k a)

single : <Eff B> X -> [Eff A, Eff B] X
single x = x
single <oper -> k> = <Eff(s a b -> s a b b)> (k b)

full : <Eff B> X -> [Eff A] X
full x = x
full <m> = full (single (<Eff(s a b b -> s a b)> m!))

main : {B}
main! = handleA (full oper!)